gcc/testsuite/gm2/iso/fail/badparam4.def
DEFINITION MODULE badparam4 ;

PROCEDURE foo (x, y: CARDINAL) ;

END badparam4.
